# CS-421

./: README.md
mp0-setup/: README.md  mp0-setup.cabal
mp0-setup/app/: Main.hs
mp1-haskell/app/: Main.hs
mp1-haskell/test/: Spec.hs
mp2-interpreter/: README.md  mp2-interpreter.cabal
mp2-interpreter/app/: Main.hs
mp2-interpreter/test/: Spec.hs
mp3-forth/: README.md  mp3-forth.cabal
mp3-forth/app/: Main.hs
mp3-forth/test/: Spec.hs  Tests.hs
mp4-cps/: README.md  mp4-cps.cabal
mp4-cps/app/: Main.hs
mp4-cps/test/: Spec.hs  Tests.hs
mp5-scheme/: README.md  mp5-scheme.cabal
mp5-scheme/app/: Main.hs
mp5-scheme/test/: Tests.hs
